--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Permanent Marker', cursive;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
