feat(game): cells distinguished by players

--- a/ui/src/app/views/game-view/game-view.component.html
+++ b/ui/src/app/views/game-view/game-view.component.html
@@ -1,6 +1,20 @@
 <div class="game-area">
-  <div *ngFor="let cell of cells$ | async"
-       class="game-cell"
+  <div *ngFor="let cell of myCells$ | async"
+       class="game-cell game-cell-mine"
+       [style.left.%]="cell.x * 100"
+       [style.top.%]="cell.y * 100">
+    <div class="game-cell-label">{{cell.weight}}</div>
+  </div>
+
+  <div *ngFor="let cell of theirCells$ | async"
+       class="game-cell game-cell-theirs"
+       [style.left.%]="cell.x * 100"
+       [style.top.%]="cell.y * 100">
+    <div class="game-cell-label">{{cell.weight}}</div>
+  </div>
+
+  <div *ngFor="let cell of neutralCells$ | async"
+       class="game-cell game-cell-neutral"
        [style.left.%]="cell.x * 100"
        [style.top.%]="cell.y * 100">
     <div class="game-cell-label">{{cell.weight}}</div>
