--- a/ui/src/app/views/game-view/game-view.component.scss
+++ b/ui/src/app/views/game-view/game-view.component.scss
@@ -9,7 +9,6 @@
 .game-cell {
   width: 50px;
   height: 50px;
-  background-color: $theme-color-4;
   border: 1px solid $theme-color-1;
   color: $theme-color-1;
   border-radius: 50%;
@@ -18,7 +17,15 @@
   justify-content: center;
   align-items: center;
 
-  &.game-cell-me {
+  &.game-cell-mine {
     background-color: $theme-color-5;
+  }
+
+  &.game-cell-theirs {
+    background-color: $theme-color-4;
+  }
+
+  &.game-cell-neutral {
+    background-color: $theme-color-2;
   }
 }
