--- a/ui/src/app/views/game-view/game-view.component.scss
+++ b/ui/src/app/views/game-view/game-view.component.scss
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  user-select: none;
 
   &.game-cell-mine {
     background-color: $theme-color-5;
