--- a/ui/src/app/views/game-view/game-view.component.scss
+++ b/ui/src/app/views/game-view/game-view.component.scss
@@ -17,6 +17,7 @@
   justify-content: center;
   align-items: center;
   user-select: none;
+  cursor: default;
 
   &.game-cell-mine {
     background-color: $theme-color-5;
@@ -28,5 +29,14 @@
 
   &.game-cell-neutral {
     background-color: $theme-color-2;
+  }
+
+  &.game-cell-clickable {
+    cursor: pointer;
+    box-shadow: 0 0 15px rgba(black, 0.5);
+  }
+
+  &.game-cell-selected {
+    opacity: 0.7;
   }
 }
