--- a/ui/src/app/views/game-view/game-view.component.scss
+++ b/ui/src/app/views/game-view/game-view.component.scss
@@ -1,14 +1,17 @@
 @import '../../../theme';
 
+$cell-size: 50px;
+
 .game-area {
+  margin: 50px auto 0 auto;
   width: 500px;
   height: 500px;
   position: relative;
 }
 
 .game-cell {
-  width: 50px;
-  height: 50px;
+  width: $cell-size;
+  height: $cell-size;
   border: 1px solid $theme-color-1;
   color: $theme-color-1;
   border-radius: 50%;
@@ -18,6 +21,7 @@
   align-items: center;
   user-select: none;
   cursor: default;
+  transform: translate(#{-$cell-size / 2}, #{-$cell-size / 2});
 
   &.game-cell-mine {
     background-color: $theme-color-5;
