--- a/ui/src/app/app.component.scss
+++ b/ui/src/app/app.component.scss
@@ -3,10 +3,12 @@
 .app {
   height: 100%;
   background-color: $theme-color-3;
+  display: flex;
+  flex-direction: column;
 }
 
 .app-toolbar {
-  height: 80px;
+  flex: 0 0 80px;
   background-color: #EAC769;
   border-bottom: 1px solid $theme-color-1;
   display: flex;
@@ -20,3 +22,6 @@
   text-shadow: -1px 0 $theme-color-1, 0 1px $theme-color-1, 1px 0 $theme-color-1, 0 -1px $theme-color-1;
 }
 
+.app-content {
+  flex: 0 1 100%;
+}
