--- a/ui/src/app/views/game-view/game-view.component.html
+++ b/ui/src/app/views/game-view/game-view.component.html
@@ -1,33 +1,9 @@
-<div class="game-area" [ngClass]="{'game-are-after-select': selectedCell}">
-  <div *ngFor="let cell of myCells$ | async; trackBy: identifyCell"
-       class="game-cell game-cell-mine"
-       [style.left.%]="cell.x * 100"
-       [style.top.%]="cell.y * 100"
-       [ngClass]="{'game-cell-clickable': cell.id !== selectedCell, 'game-cell-selected': cell.id === selectedCell}"
-       (click)="sendTransfer(cell, 'mine')">
-    <div class="game-cell-label">{{cell.weight}}</div>
-  </div>
-
-  <div *ngFor="let cell of theirCells$ | async; trackBy: identifyCell"
-       class="game-cell game-cell-theirs"
-       [style.left.%]="cell.x * 100"
-       [style.top.%]="cell.y * 100"
-       [ngClass]="{'game-cell-clickable': selectedCell}"
-       (click)="sendTransfer(cell, 'theirs')">
-    <div class="game-cell-label">{{cell.weight}}</div>
-  </div>
-
-  <div *ngFor="let cell of neutralCells$ | async; trackBy: identifyCell"
-       class="game-cell game-cell-neutral"
-       [style.left.%]="cell.x * 100"
-       [style.top.%]="cell.y * 100"
-       [ngClass]="{'game-cell-clickable': selectedCell}"
-       (click)="sendTransfer(cell, 'neutral')">
-    <div class="game-cell-label">{{cell.weight}}</div>
-  </div>
-
-  <zo-transfer
-    *ngFor="let transfer of transfers$ | async; trackBy: identifyTransfer"
-    [transfer]="transfer">
-  </zo-transfer>
+<div class="game-view">
+  <zo-board *ngIf="meKnown$ | async; else loginForm"></zo-board>
+  <ng-template #loginForm>
+    <div class="game-login-form">
+      <button class="game-login-button" (click)="logIn()">Log in with Google</button>
+      <button class="game-login-button" (click)="logIn(true)">Log in anonymously</button>
+    </div>
+  </ng-template>
 </div>
