--- a/ui/src/app/views/game-view/game-view.component.scss
+++ b/ui/src/app/views/game-view/game-view.component.scss
@@ -1,5 +1,12 @@
 @import '../../../theme';
 
+@keyframes pulsate {
+  0% { transform: scale(1); }
+  15% { transform: scale(1.4); }
+  30% { transform: scale(1); }
+  100% { transform: scale(1); }
+}
+
 .game-view {
   width: 100%;
   height: 100%;
@@ -26,5 +33,23 @@
 
   &:not(:last-child) {
     margin-bottom: 20px;
+  }
+}
+
+.game-status-hint {
+  font-size: 30px;
+}
+
+.game-status-hint-ellipsis {
+  > * {
+    font-size: 40px;
+    margin-right: 3px;
+    display: inline-block;
+    transform-origin: center 75%;
+    animation: pulsate 800ms infinite;
+
+    &:nth-child(1) { animation-delay: 200ms }
+    &:nth-child(2) { animation-delay: 400ms }
+    &:nth-child(3) { animation-delay: 600ms }
   }
 }
