--- a/ui/src/app/app.component.scss
+++ b/ui/src/app/app.component.scss
@@ -12,14 +12,21 @@
   background-color: #EAC769;
   border-bottom: 1px solid $theme-color-1;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 25px;
 }
 
 .app-title {
   color: $theme-color-5;
   font-size: 50px;
   text-shadow: -1px 0 $theme-color-1, 0 1px $theme-color-1, 1px 0 $theme-color-1, 0 -1px $theme-color-1;
+}
+
+.app-tray {
+  > * {
+    margin-left: 20px;
+  }
 }
 
 .app-content {
