--- a/ui/src/app/views/game-view/game-view.component.scss
+++ b/ui/src/app/views/game-view/game-view.component.scss
@@ -19,19 +19,8 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-}
 
-.game-login-button {
-  padding: 10px 15px;
-  border: 1px solid $theme-color-1;
-  border-radius: 10px;
-  background-color: $theme-color-4;
-  color: $theme-color-1;
-  font-size: 20px;
-  cursor: pointer;
-  outline: none;
-
-  &:not(:last-child) {
+  > *:not(:last-child) {
     margin-bottom: 20px;
   }
 }
