--- a/ui/src/app/views/game-view/game-view.component.scss
+++ b/ui/src/app/views/game-view/game-view.component.scss
@@ -42,3 +42,9 @@
     &:nth-child(3) { animation-delay: 600ms }
   }
 }
+
+.game-board-header {
+  font-size: 30px;
+  height: 40px;
+  text-align: center;
+}
