--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+@import 'theme';
 
 * {
   margin: 0;
   padding: 0;
   font-family: 'Permanent Marker', cursive;
+  color: $theme-color-1;
 }
 
 html, body {
